"test(app): add and validate full unit and UI testing suite for mGapp"

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="app_name">mGapp</string>
     <!-- HotspotBottomSheet.kt -->
     <string name="new_hotspot">Nuevo hotspot</string>
     <string name="edit_hotspot">Editar hotspot</string>
