--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <string name="app_name">mGapp</string>
     <!-- HotspotBottomSheet.kt -->
     <string name="new_hotspot">Neuer Hotspot</string>
     <string name="edit_hotspot">Hotspot bearbeiten</string>
